--- a/sample.env
+++ b/sample.env
@@ -4,6 +4,7 @@ BOT_TOKEN= # @botfather
 LOG_GROUP_ID= # log group @Takehito_bot type /id -100 public or private // your added bot be admin
 OWNER_ID= # owner id @takehito_bot type /info
 MUSIC_BOT_NAME=Rendy Projects 
+BOT_USERNAME= # botfather without @
 STRING_SESSION= # get string @VegetaSessionBot // program 
 AUTO_LEAVING_ASSISTANT=True # or False // Auto leave Group
 UPSTREAM_REPO=https://github.com/TeamKilerX/KillerX-Music # DON'T EDITING HERE
