sample.env: i forgot add modules

--- a/sample.env
+++ b/sample.env
@@ -7,5 +7,6 @@ MUSIC_BOT_NAME=Rendy Projects
 BOT_USERNAME= # botfather without @
 STRING_SESSION= # get string @VegetaSessionBot // program 
 AUTO_LEAVING_ASSISTANT=True # or False // Auto leave Group
+SUPPORT_CHANNEL= 
 UPSTREAM_REPO=https://github.com/TeamKilerX/KillerX-Music # DON'T EDITING HERE
 UPSTREAM_BRANCH=dev # branch
