--- a/sample.env
+++ b/sample.env
@@ -3,6 +3,7 @@ API_HASH= # my.telegram.org
 BOT_TOKEN= # @botfather
 LOG_GROUP_ID= # log group @Takehito_bot type /id -100 public or private // your added bot be admin
 OWNER_ID= # owner id @takehito_bot type /info
+MONGO_DB_URI=
 MUSIC_BOT_NAME=Rendy Projects 
 STRING_SESSION= # get string @VegetaSessionBot // program 
 AUTO_LEAVING_ASSISTANT=True # or False // Auto leave Group
