--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
-github: [Randi356, TeamKillerX, TeamYukki]
+github: [Randi356, TeamYukki, TeamKillerX]
 community_bridge: rendyprojects
-custom: ['https://t.me/RendyProjects', 'https://t.me/pantekyks']
+custom: ['https://t.me/RendyProjects', 'https://t.me/codedev_support']
