--- a/app.json
+++ b/app.json
@@ -84,7 +84,7 @@
               "url": "heroku/python"
           },
           {
-              "url": "heroku/nodejs"
+              "url": "https://github.com/heroku/heroku-buildpack-nodejs"
           },
           {
               "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
