--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "telegram-bot",
     "pyrogram"
     ],
-    "stack": "container",
+    "stack": "heroku-22",
     "env": {
       "API_ID": {
         "description": "Get this value from https://my.telegram.org",
@@ -79,7 +79,7 @@
               "url": "heroku/python"
           },
           {
-              "url": "heroku/nodejs"
+              "url": "https://github.com/heroku/heroku-buildpack-nodejs"
           },
           {
               "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
