--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,27 @@
 py-tgcalls==0.9.1
 pyrogram==1.4.16
+aiofiles
+bs4
+aiohttp
+asyncio
+dnspython
+ffmpeg-python
+gitpython
+hachoir
+heroku3
+lyricsgenius
+motor
+pillow
+psutil
+pykeyboard
+python-dotenv
+PyYAML
+psycopg2-binary
+requests
+spotipy
+speedtest-cli
+tgcrypto
+wget
+youtube-search
+youtube-search-python
+git+https://github.com/Randi356/yt-dlp
