--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,4 +2,4 @@
 
 github: [Randi356, TeamYukki, TeamKillerX]
 community_bridge: rendyprojects
-custom: ['https://t.me/RendyProjects', 'https://t.me/codedev_support']
+custom: ['https://t.me/RendyProjects', 'https://t.me/KillerXSupport']
