--- a/sample.env
+++ b/sample.env
@@ -8,3 +8,4 @@ MUSIC_BOT_NAME=Rendy Projects
 STRING_SESSION= # get string @VegetaSessionBot // program 
 AUTO_LEAVING_ASSISTANT=True # or False // Auto leave Group
 SUPPORT_CHANNEL=https://t.me/RendyProjects
+BOT_USERNAME=RendyTapiBot
