--- a/config.env.sample
+++ b/config.env.sample
@@ -10,3 +10,4 @@ MUSIC_BOT_NAME="Rendy Projects"
 STRING_SESSION=""
 AUTO_LEAVING_ASSISTANT="True"
 SUPPORT_CHANNEL="https://t.me/RendyProjects"
+BOT_USERNAME="RendyTapiBot"
