--- a/sample.env
+++ b/sample.env
@@ -1,11 +1,10 @@
 API_ID= # my.telegram.org
 API_HASH= # my.telegram.org
 BOT_TOKEN= # @botfather
-LOG_GROUP_ID= # log group @Takehito_bot type /id -100 public or private // your added bot be admin
+LOG_GROUP_ID= # log group @RendyTapiBot type /id -100 public or private // your added bot be admin
 OWNER_ID= # owner id @RendyTapiBot type /info
 MONGO_DB_URI=
 MUSIC_BOT_NAME=Rendy Projects 
 STRING_SESSION= # get string @VegetaSessionBot // program 
-AUTO_LEAVING_ASSISTANT=True # or False // Auto leave Group
-SUPPORT_CHANNEL=https://t.me/RendyProjects
+AUTO_LEAVING_ASSISTANT=True
 BOT_USERNAME=RendyTapiBot
