--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,4 @@
 # These are supported funding model platforms
 
 github: [Randi356, TeamYukki, TeamKillerX]
-community_bridge: rendyprojects
-custom: ['https://t.me/RendyProjects', 'https://t.me/KillerXSupport']
+custom: ['https://t.me/RendyProjects', 'https://t.me/KillerXSupport','https://teamkillerx.gitbook.io/teamkillerx/']
