--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-py-tgcalls==0.8.6
 pyrogram==1.4.16
 aiofiles
 bs4
@@ -10,7 +9,7 @@ gitpython
 hachoir
 heroku3
 lyricsgenius
-motor
+motor==3.0.0
 pillow
 psutil
 pykeyboard
@@ -19,9 +18,10 @@ PyYAML
 psycopg2-binary
 requests
 spotipy
-speedtest-cli
 tgcrypto
 wget
 youtube-search
 youtube-search-python
 git+https://github.com/Randi356/yt-dlp
+git+https://github.com/TeamKillerX/speedtest-cli
+git+https://github.com/TeamKillerX/pytgcalls==0.8.6
