--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,8 @@
-API_ID= # my.telegram.org
-API_HASH= # my.telegram.org
-BOT_TOKEN= # @botfather
-LOG_GROUP_ID= # log group @RendyTapiBot type /id -100 public or private // your added bot be admin
-OWNER_ID= # owner id @RendyTapiBot type /info
+API_ID= 
+API_HASH= 
+BOT_TOKEN= 
+LOG_GROUP_ID=
+OWNER_ID= 
 MONGO_DB_URI=
-MUSIC_BOT_NAME=Rendy Projects 
-STRING_SESSION= # get string @VegetaSessionBot // program 
+MUSIC_BOT_NAME= 
+STRING_SESSION= 
