--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pyrogram==1.4.16
 aiofiles
 bs4
+wget
 aiohttp
 asyncio
 dnspython
@@ -12,16 +12,15 @@ lyricsgenius
 motor==3.0.0
 pillow
 psutil
+py-tgcalls==0.8.6
 pykeyboard
+pyrogram==1.4.16
 python-dotenv
-PyYAML
-psycopg2-binary
+pyyaml==5.3.1
 requests
+speedtest-cli
 spotipy
 tgcrypto
-wget
 youtube-search
 youtube-search-python
-py-tgcalls==0.8.6
-git+https://github.com/Randi356/yt-dlp
-git+https://github.com/TeamKillerX/speedtest-cli
+yt-dlp
