--- a/requirements.txt
+++ b/requirements.txt
@@ -9,18 +9,20 @@ gitpython
 hachoir
 heroku3
 lyricsgenius
-motor==3.0.0
+motor
+pymongo[srv]
 pillow
 psutil
-py-tgcalls==0.9.1
+py-tgcalls==0.8.6
 pykeyboard
-pyrogram==1.4.16
+pyrogram==1.4.8
 python-dotenv
-pyyaml==5.4
+pyyaml
+rich
 requests
 speedtest-cli
 spotipy
-tgcrypto
+TgCrypto
 youtube-search
 youtube-search-python
 yt-dlp
