--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: [Randi356, TeamYukki, TeamKillerX]
+github: [Randi356, TeamYukki, TeamKillerX, xtsea]
 custom: ['https://t.me/RendyProjects', 'https://t.me/KillerXSupport','https://teamkillerx.gitbook.io/teamkillerx/']
