--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 
 services:
-  meta:
+  killerx:
       build:
         context: https://github.com/TeamKillerX/KillerX-Music.git#dev
       restart: on-failure
